- fixed state-component multi update at the same time - fixed button style (remove box-shadow when no color is passed as input) - fixed pagination when no items are present in the list - added tooltip to edit profile and region in the player profile - added orderBy and orderByDirection in the method to fetch the score approval list

--- a/src/app/player/profile/profile.component.html
+++ b/src/app/player/profile/profile.component.html
@@ -1,10 +1,10 @@
 <card *ngIf="player$ | async as player">
   <h3 cardTitle>
     {{ player.personaName }}
-    <button bioButton icon [loading]="loadingRegion$ | async">
+    <button bioButton icon [loading]="loadingRegion$ | async" [tooltip]="player.region?.name">
       <icon [flag]="player.region?.shortName" (click)="openModalSelectRegion()" (mouseenter)="preloadRegions()"></icon>
     </button>
-    <icon small *ngIf="isSameAsLogged$ | async" (click)="toggleEditMode()">edit</icon>
+    <icon tooltip="Edit profile" small *ngIf="isSameAsLogged$ | async" (click)="toggleEditMode()">edit</icon>
   </h3>
   <div cardSubtitle>{{ player.title }}</div>
   <div cardSubtitle class="about-me">{{ player.aboutMe }}</div>
