- fixed box-shadow of button in table being cut - added abstract-score service to avoid circular dependency - added auth-date-format (format the date based on the user config) - reversed the box-shadow fix in the button - added openModalScoreApproval to score service - added button to approve/reject score in the score-approval component - refactor score approval component to store the list in the state, so it can be updated when the score is approved - added score-approval-motive store, query, service and model - added missing idScorePlayer property in the ScorePlayerVW - added property dateFormat to user

--- a/src/app/score/score-shared/score-approval/score-approval.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval.component.html
@@ -13,6 +13,7 @@
 <card [bioLoading]="tableLoading$ | async" class="flex-table">
   <card-content *ngLet="order$ | async as order">
     <div class="header" *ngLet="order.orderByDirection === 'desc' ? 'arrow_drop_up' : 'arrow_drop_down' as arrow">
+      <div class="approve"></div>
       <div class="platform">Platform</div>
       <div class="game" (click)="changeOrder('game')">
         Game
@@ -57,6 +58,28 @@
       <div class="no-data-found" *ngIf="!scores.length">No scores found</div>
       <ng-container *ngFor="let score of scores; trackBy: trackByScore">
         <div>
+          <div class="approve">
+            <button
+              bioButton
+              icon
+              small
+              tooltip="Approve"
+              tooltipPosition="right"
+              (click)="openModalApproval(scoreApprovalActionEnum.Approve, score)"
+            >
+              <icon small>check</icon>
+            </button>
+            <button
+              bioButton
+              icon
+              small
+              tooltip="Reject"
+              tooltipPosition="right"
+              (click)="openModalApproval(scoreApprovalActionEnum.Reject, score)"
+            >
+              <icon small>close</icon>
+            </button>
+          </div>
           <div class="platform">{{ score.platformShortName }}</div>
           <div class="game">{{ score.gameShortName }}</div>
           <div class="mini-game">{{ score.miniGameName }}</div>
@@ -64,8 +87,8 @@
           <div class="score">{{ score.score | number: '1.0-0' }}</div>
           <div class="date-achieved">{{ score.dateAchieved | date: 'dd/MM/yyyy' }}</div>
           <div class="creation-date">{{ score.creationDate | date: 'dd/MM/yyyy' }}</div>
-          <div class="players">
-            {{ score.scorePlayers | join: 'playerPersonaName':' | ' }}
+          <div class="players" *ngLet="score.scorePlayers | join: 'playerPersonaName':' | ' as players">
+            <span [tooltip]="players" tooltipPosition="left">{{ players }}</span>
           </div>
         </div>
         <hr />
