--- a/src/app/score/score-shared/score-approval/score-approval.component.scss
+++ b/src/app/score/score-shared/score-approval/score-approval.component.scss
@@ -12,6 +12,10 @@
       flex-basis: 125px;
       flex-grow: 0;
     }
+    .approve {
+      flex-basis: 55px;
+      flex-grow: 0;
+    }
     .score {
       justify-content: flex-end;
       padding-right: 1.25rem;
