--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    min-height: 36px;
     > div {
       position: relative;
       flex: 1;
@@ -20,6 +21,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 0 4px;
     }
   }
 }
