--- a/src/styles/_plugins.scss
+++ b/src/styles/_plugins.scss
@@ -2,3 +2,4 @@
 @import '~@angular/cdk/a11y-prebuilt.css';
 @import '~@angular/cdk/text-field-prebuilt.css';
 @import '~flag-icon-css/sass/flag-icon';
+@import '~@mdi/font/scss/materialdesignicons';
