--- a/src/app/score/score-shared/score-approval/score-approval.component.scss
+++ b/src/app/score/score-shared/score-approval/score-approval.component.scss
@@ -3,11 +3,11 @@
   .body {
     .platform,
     .game,
-    .mode {
-      flex-basis: 100px;
+    .mode,
+    .stage {
+      flex-basis: 80px;
       flex-grow: 0;
     }
-    .date-achieved,
     .creation-date {
       flex-basis: 125px;
       flex-grow: 0;
@@ -32,7 +32,7 @@
     }
   }
   .header {
-    > div:not(:last-child):not(:first-child) {
+    > div:not(:last-child):not(:first-child):not(.platform) {
       cursor: pointer;
     }
   }
