--- a/src/app/shared/params/params.component.scss
+++ b/src/app/shared/params/params.component.scss
@@ -3,19 +3,7 @@
 :host {
   > div {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 1rem;
-    @media only screen and (max-width: $mobile-width) {
-      grid-template-columns: 1fr;
-    }
-    @media only screen and (min-width: $big-screen-width) {
-      display: flex;
-      > .form-field {
-        width: 100%;
-        &:not(:last-of-type) {
-          margin-right: 1rem;
-        }
-      }
-    }
   }
 }
