--- a/src/app/player/profile/profile.component.html
+++ b/src/app/player/profile/profile.component.html
@@ -1,7 +1,7 @@
 <card *ngIf="player$ | async as player">
   <h3 cardTitle>
     {{ player.personaName }}
-    <button bioButton icon [loading]="loadingRegion$ | async" [tooltip]="player.region?.name">
+    <button bioButton icon [disabled]="loadingRegion$ | async" [tooltip]="player.region?.name">
       <icon [flag]="player.region?.shortName" (click)="openModalSelectRegion()" (mouseenter)="preloadRegions()"></icon>
     </button>
     <icon tooltip="Edit profile" small *ngIf="isSameAsLogged$ | async" (click)="toggleEditMode()">edit</icon>
