--- a/src/app/score/score-shared/score-approval/score-approval.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval.component.html
@@ -1,4 +1,4 @@
-<card>
+<card class="params">
   <h3 cardTitle>Parameters</h3>
   <card-content>
     <bio-params
@@ -56,42 +56,46 @@
     <hr />
     <div class="body" *ngIf="scores$ | async as scores">
       <div class="no-data-found" *ngIf="!scores.length">No scores found</div>
-      <ng-container *ngFor="let score of scores; trackBy: trackByScore">
-        <div>
-          <div class="approve">
-            <button
-              bioButton
-              icon
-              small
-              tooltip="Approve"
-              tooltipPosition="right"
-              (click)="openModalApproval(scoreApprovalActionEnum.Approve, score)"
-            >
-              <icon small>check</icon>
-            </button>
-            <button
-              bioButton
-              icon
-              small
-              tooltip="Reject"
-              tooltipPosition="right"
-              (click)="openModalApproval(scoreApprovalActionEnum.Reject, score)"
-            >
-              <icon small>close</icon>
-            </button>
+      <ng-container *ngLet="loadingApprovalModal$ | async as loadingApprovalModal">
+        <ng-container *ngFor="let score of scores; trackBy: trackByScore">
+          <div>
+            <div class="approve">
+              <button
+                bioButton
+                icon
+                small
+                tooltip="Approve"
+                tooltipPosition="right"
+                (click)="openModalApproval(scoreApprovalActionEnum.Approve, score)"
+                [disabled]="loadingApprovalModal"
+              >
+                <icon small>check</icon>
+              </button>
+              <button
+                bioButton
+                icon
+                small
+                tooltip="Reject"
+                tooltipPosition="right"
+                (click)="openModalApproval(scoreApprovalActionEnum.Reject, score)"
+                [disabled]="loadingApprovalModal"
+              >
+                <icon small>close</icon>
+              </button>
+            </div>
+            <div class="platform">{{ score.platformShortName }}</div>
+            <div class="game">{{ score.gameShortName }}</div>
+            <div class="mini-game">{{ score.miniGameName }}</div>
+            <div class="mode">{{ score.modeName }}</div>
+            <div class="stage">{{ score.stageShortName }}</div>
+            <div class="score">{{ score.score | number: '1.0-0' }}</div>
+            <div class="creation-date">{{ score.creationDate | authDateFormat }}</div>
+            <div class="players" *ngLet="score.scorePlayers | join: 'playerPersonaName':' | ' as players">
+              <span [tooltip]="players" tooltipPosition="left">{{ players }}</span>
+            </div>
           </div>
-          <div class="platform">{{ score.platformShortName }}</div>
-          <div class="game">{{ score.gameShortName }}</div>
-          <div class="mini-game">{{ score.miniGameName }}</div>
-          <div class="mode">{{ score.modeName }}</div>
-          <div class="stage">{{ score.stageShortName }}</div>
-          <div class="score">{{ score.score | number: '1.0-0' }}</div>
-          <div class="creation-date">{{ score.creationDate | authDateFormat }}</div>
-          <div class="players" *ngLet="score.scorePlayers | join: 'playerPersonaName':' | ' as players">
-            <span [tooltip]="players" tooltipPosition="left">{{ players }}</span>
-          </div>
-        </div>
-        <hr />
+          <hr />
+        </ng-container>
       </ng-container>
     </div>
   </card-content>
