- added prefer-const rule to eslint - renamed catchError --> catch-and-throw - added AuthPlayerResolver to resolve the player currently logged in - added CurrencyMaskDirective (the ngx-currency, but with @stlmpp/control) - added ScoreAddComponent - added MaskDirective (ngx-mask, but with @stlmpp/control) - made the ModalRef.init method private and renamed to _init - added option on ScoreParamsComponent to get the params from the QueryParams - removed dateAchieved from ScoreAdd model - fixed the select now displaying the selected value correctly when grouped - removed the auditTime from the StateComponent, used observeOn instead (it was causing a massive delay in some areas) - added option to check for input changes in the StateComponent, for auto updating

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,10 @@
         <icon>leaderboard</icon>
         Leaderboards
       </a>
+      <a type="button" bioButton routerLink="/score/add" queryParamsHandling="merge">
+        <icon>add</icon>
+        Submit score
+      </a>
       <button type="button" bioButton [menuTrigger]="menu">
         <icon>person</icon>
         {{ user.username }}
