--- a/src/app/score/score-top-table/score-top-table.component.html
+++ b/src/app/score/score-top-table/score-top-table.component.html
@@ -2,7 +2,7 @@
   <h3 cardTitle>Parameters</h3>
   <card-content>
     <bio-params
-      [params]="form.value$ | async"
+      [params]="form.valueChanges$ | async"
       (paramsChange)="paramsChange($event)"
       [config]="paramsConfig"
       setQueryParamsOnChange
