--- a/src/app/shared/components/modal/dialog/dialog.component.html
+++ b/src/app/shared/components/modal/dialog/dialog.component.html
@@ -1,4 +1,9 @@
-<h5 modalTitle *ngIf="data.title">{{ data.title }}</h5>
+<h5 modalTitle *ngIf="data.title">
+  <icon *ngIf="data.type !== dialogType.confirmation" [ngSwitch]="data.type">
+    <ng-container *ngSwitchCase="dialogType.success">check_circle_outline</ng-container>
+  </icon>
+  {{ data.title }}
+</h5>
 <modal-content [innerHTML]="data.content"></modal-content>
 <modal-actions end>
   <button bioButton primary *ngIf="data.btnNo" (click)="no()" type="button">{{ data.btnNo }}</button>
